# sdl-experience

./: .gitignore  CApp.cpp  CApp.h  CMakeLists.txt  LICENSE  README.md  main.cpp  package.json
app/: CApp_OnCleanup.cpp  CApp_OnEvent.cpp  CApp_OnInit.cpp  CApp_OnLoop.cpp  CApp_OnRender.cpp
app/CSurface/: CSurface.cpp  CSurface.h
